----------
v6.2.0-git
----------

[mms] Add bare address information to title attribute in viewport on dynamic
      mailbox page
[mms] Display flags on the smartmobile mailbox page (Request #12687).
[mms] Support non-ASCII characters in user-defined flag names (Request #12335).
[mms] Potentially save a call to the contacts backend when viewing HTML
      messages if no image data is present in the message.
[mms] Improved styling of dynamic mailbox page, to fix issues when resizing the
      browser font size (Bug #13071).
[mms] Don't send as multipart/alternative if plaintext part is empty.
[mms] Add smiley data to message when added via the HTML editor (Request
      #13051).
[mms] Add mailbox size information retrieval to dynamic view (Request #12965).
[mms] Display unread message count in title via favicon bubbles, if browser
      supports.
[mms] Abstracted maillog code.
[mms] Enable configuration of IMAP cache lifetime for Horde_Cache and
      Hashtable backends.
[mms] Only refresh quota information when switching to a mailbox the first
      time.
[mms] More efficiently store mailbox cache information in the session.
[mms] Load copy/move mailbox selection list on-demand in smartmobile view.
[mms] Cache results of inline image view status.
[mjr] Add IMP_Api::logRecipient.
[mms] Remove the mail_domain preference.
[mjr] Add display of reccurence data to iTip viewer (Request #12919).
[mms] Allow HTML data to be pasted within HTML compose editor paste dialog.
[mms] Filter outgoing HTML compose messages for XSS vulnerabilities.
[mms] Add permission to limit the maximum body size of a composed message.
[mms] Show placeholder image when dropping onto HTML editor while the image is
      uploaded to the server.
[mms] Add rate limiting to new mail notification alerts to prevent flooding of
      the remote mail server (Request #12705).
[mms] Browser stored preferences are now prefixed by user information.
[mms] Strip PGP armor text when replying to a message.