@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Implement web notifications for new mail alerts.
 * [mms] Add bare address information to title attribute in viewport on dynamic mailbox page
 * [mms] Display flags on the smartmobile mailbox page (Request #12687).
 * [mms] Support non-ASCII characters in user-defined flag names (Request #12335).
