@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Implement web notifications for new mail alerts.
 [mms] Add bare address information to title attribute in viewport on dynamic
       mailbox page
 [mms] Display flags on the smartmobile mailbox page (Request #12687).
